@@ -890,7 +890,7 @@ class BzrDir(object):
 
     def sprout(self, url, revision_id=None, force_new_repo=False,
                recurse='down', possible_transports=None,
-               accelerator_tree=None, hardlink=False):
+               accelerator_tree=None, hardlink=False, shallow=False):
         """Create a copy of this bzrdir prepared for use as a new line of
         development.
 
@@ -909,6 +909,8 @@ class BzrDir(object):
             content is different.
         :param hardlink: If true, hard-link files from accelerator_tree,
             where possible.
+        :param shallow: If true, create a shallow branch referring to the
+            location of this control directory.
         """
         target_transport = get_transport(url, possible_transports)
         target_transport.ensure_base()
@@ -917,6 +919,15 @@ class BzrDir(object):
         try:
             source_branch = self.open_branch()
             source_repository = source_branch.repository
+            if shallow:
+                shallow_branch_url = self.root_transport.base
+            else:
+                shallow_branch_url = None
+                try:
+                    shallow_branch_url = source_branch.get_stacked_on()
+                except (errors.NotStacked, errors.UnstackableBranchFormat,
+                    errors.UnstackableRepositoryFormat):
+                    shallow_branch_url = None
         except errors.NotBranchError:
             source_branch = None
             try:
@@ -935,6 +946,16 @@ class BzrDir(object):
         elif source_repository is None and result_repo is None:
             # no repo available, make a new one
             result.create_repository()
+        elif shallow_branch_url:
+            if result_repo is None:
+                result_repo = source_repository._format.initialize(result)
+            stacked_dir = BzrDir.open(shallow_branch_url)
+            try:
+                stacked_repo = stacked_dir.open_branch().repository
+            except errors.NotBranchError:
+                stacked_repo = stacked_dir.open_repository()
+            result_repo.add_fallback_repository(stacked_repo)
+            result_repo.fetch(source_repository, revision_id=revision_id)
         elif source_repository is not None and result_repo is None:
             # have source, and want to make a new target repo
             result_repo = source_repository.sprout(result,
@@ -948,9 +969,11 @@ class BzrDir(object):
                 # so we can override the copy method
                 result_repo.fetch(source_repository, revision_id=revision_id)
         if source_branch is not None:
-            source_branch.sprout(result, revision_id=revision_id)
+            result_branch = source_branch.sprout(result, revision_id=revision_id)
         else:
-            result.create_branch()
+            result_branch = result.create_branch()
+        if shallow_branch_url:
+            result_branch.set_stacked_on(shallow_branch_url)
         if isinstance(target_transport, LocalTransport) and (
             result_repo is None or result_repo.make_working_trees()):
             wt = result.create_workingtree(accelerator_tree=accelerator_tree,
@@ -1124,8 +1147,11 @@ class BzrDirPreSplitOut(BzrDir):
 
     def sprout(self, url, revision_id=None, force_new_repo=False,
                possible_transports=None, accelerator_tree=None,
-               hardlink=False):
+               hardlink=False, shallow=False):
         """See BzrDir.sprout()."""
+        if shallow:
+            raise errors.UnstackableBranchFormat(
+                self._format, self.root_transport.base)
         from bzrlib.workingtree import WorkingTreeFormat2
         self._make_tail(url)
         result = self._format._initialize_for_clone(url)
