@@ -44,3 +44,17 @@ class TestStacking(TestCaseWithBranch):
         self.assertEqual(target.base, branch.get_stacked_on())
         branch.set_stacked_on(None)
         self.assertRaises(errors.NotStacked, branch.get_stacked_on)
+
+    def test_set_stacked_on_fetches(self):
+        # We have a mainline
+        trunk_tree = self.make_branch_and_tree('mainline')
+        trunk_revid = trunk_tree.commit('mainline')
+        # and make branch from it which is shallow
+        try:
+            new_dir = trunk_tree.bzrdir.sprout('newbranch', shallow=True)
+        except (errors.UnstackableBranchFormat, errors.UnstackableRepositoryFormat):
+            # not a testable combination.
+            return
+        new_tree = new_dir.open_workingtree()
+        new_tree.commit('something local')
+
